plugins {
	id 'fabric-loom' version "1.11.7"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = properties["archives_base_name"] as String
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	mavenCentral()

	maven {
		url 'https://jitpack.io'
	}
	maven { url 'https://maven.wispforest.io/releases/' }
    maven { url "https://maven.shedaniel.me/" }
}

loom {
	mixin {
		defaultRefmapName = "12th-client.refmap.json"
	}
	accessWidenerPath = file("src/main/resources/12th-client.accesswidener")
}


dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "io.wispforest:owo-lib:${project.owo_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    implementation 'com.google.code.gson:gson:2.10.1'

    implementation('com.github.Vatuu:discord-rpc:1.6.2') {
        exclude group: 'net.java.dev.jna'
    }
    include 'com.github.Vatuu:discord-rpc:1.6.2'

    modImplementation fileTree(dir: "libs", include: ["*.jar"])

    implementation "net.java.dev.jna:jna:5.14.0"
    implementation "net.java.dev.jna:jna-platform:5.14.0"
}

configurations.configureEach {
    resolutionStrategy {
        force 'net.java.dev.jna:jna:5.14.0'
        force 'net.java.dev.jna:jna-platform:5.14.0'
    }
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}